Add the login page
[Delivers #162610746]

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </nav>
             <div class="main-content-header">
                 <h1>WELCOME TO THE <span class="colorchange">I REPORTER </span> SEE TAKE A PICTURE</h1>
-                <a href="login.html" class="btn btn-login">login</a>
-                <a href="signup.html" class="btn btn-signup">signup</a>
+                <a href="ui/login.html" class="btn btn-login">login</a>
+                <a href="ui/signup.html" class="btn btn-signup">signup</a>
             </div>
         </header>
         <footer>
