--- a/ui/login.html
+++ b/ui/login.html
@@ -6,20 +6,19 @@
     <header>
         <nav>
             <div class="top-logo">
-                <img src="assets/images/i2.jpg"/>
+                <img src="assets/images/logo1.jpeg"/>
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="../index.html">HOME</a></li>
                     <li><a href="signup.html">SIGN UP</a></li>
-                    <li><a href="index.html">LOGOUT</a></li>
                 </ul>
             </div>
         </nav>
         <div class="login-page">
             <div class="form">
                 <form class="login-form">
-                    <img src="#">
+                    <img src="assets/images/avator.png">
                     <h1 style="color:white">LOGIN</h1>
                     <input type="text" placeholder="username" required/><br>
                     <input type="password" placeholder="password" required/><br>
