Add delete redflag page
[#Delivers #162611945]

--- a/ui/delete-redflag.html
+++ b/ui/delete-redflag.html
@@ -14,7 +14,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="create.html">CREATE</a></li>
-                        <li><a href="delete-redflag.html" class="active" >DELETE REDFLAG</a></li>
+                        <li><a href="delete-inter.html" class="active" >DELETE INTERVENTION</a></li>
                         <li><a href="user-profile.html">USER PROFILE</a></li>
                         <li><a href="index.html">LOGOUT</a></li>
                     </ul>
@@ -25,24 +25,24 @@
             <h1 class="text">View All Records</h1>
             <div class="box-right">
                 <h3><a href="detailed-record.html" class="title">Embezzlement</a></h3>
-                <p>intervention title: ministry of finance</p>
-                <p>intervention Date: 20th aug 2018</p>
+                <p>Redflag title: ministry of finance</p>
+                <p>RedFlag Date: 20th aug 2018</p>
                 <p>comment: this is to much</p>
                 <a href="edit.html" class="btn btn-edit">Edit</a>
                 <a href="" class="btn btn-delete" onclick="confirmDelete();">Delete</a>
             </div>
             <div class="box-left">
                 <h3><a href="detailed-record.html" class="title">Malaria Fraud</a></h3>
-                <p>intervention title: ministry of finance</p>
-                <p>intervention Date: 20th aug 2018</p>
+                <p>Redflag title: ministry of finance</p>
+                <p>RedFlag Date: 20th aug 2018</p>
                 <p>comment: this is to much</p>
                 <a href="edit.html" class="btn btn-edit">Edit</a>
                 <a href="" class="btn btn-delete" onclick="confirmDelete();">Delete</a>
             </div>
             <div class="box-right">
                 <h3><a href="detailed-record.html" class="title">Tax Payers</a></h3>
-                <p>intervention title: ministry of finance</p>
-                <p>intervention Date: 20th aug 2018</p>
+                <p>Redflag title: ministry of finance</p>
+                <p>RedFlag Date: 20th aug 2018</p>
                 <p>comment: this is to much</p>
                 <a href="edit.html" class="btn btn-edit">Edit</a>
                 <a href="" class="btn btn-delete" onclick="confirmDelete();">Delete</a>
@@ -50,24 +50,24 @@
 
             <div class="box-left">
                 <h3><a href="detailed-record.html" class="title">Build Roads</a></h3>
-                <p>intervention title: ministry of finance</p>
-                <p>intervention Date: 20th aug 2018</p>
+                <p>Redflag title: ministry of finance</p>
+                <p>RedFlag Date: 20th aug 2018</p>
                 <p>comment: this is to much</p>
                 <a href="edit.html" class="btn btn-edit">Edit</a>
                 <a href="" class="btn btn-delete" onclick="confirmDelete();">Delete</a>
             </div>
             <div class="box-right">
                 <h3><a href="detailed-record.html" class="title">Bore Hole Needed</a></h3>
-                <p>intervention title: ministry of finance</p>
-                <p>intervention Date: 20th aug 2018</p>
+                <p>Redflag title: ministry of finance</p>
+                <p>RedFlag Date: 20th aug 2018</p>
                 <p>comment: this is to much</p>
                 <a href="edit.html" class="btn btn-edit">Edit</a>
                 <a href="" class="btn btn-delete" onclick="confirmDelete();">Delete</a>
             </div>
             <div class="box-left">
                 <h3><a href="detailed-record.html" class="title">Ban Polythenes</a></h3>
-                <p>intervention title: ministry of finance</p>
-                <p>intervention Date: 20th aug 2018</p>
+                <p>Redflag title: ministry of finance</p>
+                <p>RedFlag Date: 20th aug 2018</p>
                 <p>comment: this is to much</p>
                 <a href="edit.html" class="btn btn-edit">Edit</a>
                 <a href="" class="btn btn-delete" onclick="confirmDelete();">Delete</a>
