--- a/ui/user-inter.html
+++ b/ui/user-inter.html
@@ -22,7 +22,7 @@
             </nav> 
             
         <div class="main-content">
-            <h1 class="text">View All Records</h1>
+            <h1 class="text">View all user interventions</h1>
             <div class="box-right">
                 <h3><a href="detailed-record.html" class="title">Embezzlement</a></h3>
                 <p>intervation title: ministry of finance</p>
