Add responsiveness to the index page

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
                 <div class="row clearfix">
                     <img class="logo" src="ui/assets/images/logo1.jpeg"/>
                     <ul class="index-nav">
-                        <li>WELCOME</li>
                         <li><a href="#">HELP</a></li>
                         <li><a href="#">ABOUT US</a></li>
                     </ul>
+                    <div class="barger">
+                        <div class="line1"></div>
+                        <div class="line2"></div>
+                        <div class="line3"></div>
+                    </div>
                 </div>
             </nav>
             <div class="main-content-header">
-                <h1>WELCOME TO THE <span class="colorchange">I REPORTER </span> SEE TAKE A PICTURE</h1>
+                <h1>WELCOME TO THE <span class="colorchange">I REPORTER </span> SEE TAKE A PICTURE WE LOVE UGANDA</h1>
                 <a href="ui/login.html" class="btn btn-login">login</a>
                 <a href="ui/signup.html" class="btn btn-signup">signup</a>
             </div>
