Add admin view inventions
[#Delivers #162681899]

--- a/ui/admin-inver.html
+++ b/ui/admin-inver.html
@@ -13,16 +13,15 @@
                 </div>
                 <div class="menu">
                     <ul>
-                        <li><a href="create.html">CREATE</a></li>
-                        <li><a href="delete.html">DELETE</a></li>
-                        <li><a href="user-profile.html">USER PROFILE</a></li>
-                        <li><a href="../index.html">LOGOUT</a></li>
+                        <li><a href="admin-view-flags.html">ALL FLAGS</a></li>
+                        <li><a href="admin-view-inter.html">ALL INTERVENTIONS</a></li>
+                        <li><a href="index.html">LOGOUT</a></li>  
                     </ul>
                 </div>
             </nav> 
             
         <div class="main-content">
-            <h1 class="text">View all user interventions</h1>
+            <h1 class="text">View All Records</h1>
             <div class="box-right">
                 <h3><a href="detailed-record.html" class="title">Embezzlement</a></h3>
                 <p>intervation title: ministry of finance</p>
