--- a/ui/create.html
+++ b/ui/create.html
@@ -7,15 +7,15 @@
     <header>
         <nav>
             <div class="top-logo">
-                <img src="assets/images/i2.jpg"/>
+                <img src="assets/images/logo1.jpeg"/>
             </div>
             <div class="menu">
                 <ul>
                         
                     <li><a href="create.html" class="active" >CREATE</a></li>
-                    <li><a href="delete.html">DELETE</a></li>
+                    <li><a href="delete-inter.html">DELETE</a></li>
                     <li><a href="user-profile.html">USER PROFILE</a></li>
-                    <li><a href="index.html">LOGOUT</a></li>
+                    <li><a href="../index.html">LOGOUT</a></li>
                             
                 </ul>
             </div>
