--- a/ui/delete-inter.html
+++ b/ui/delete-inter.html
@@ -16,7 +16,7 @@
                         <li><a href="create.html">CREATE</a></li>
                         <li><a href="delete-redflag.html" class="active" >DELETE REDFLAG</a></li>
                         <li><a href="user-profile.html">USER PROFILE</a></li>
-                        <li><a href="index.html">LOGOUT</a></li>
+                        <li><a href="../index.html">LOGOUT</a></li>
                     </ul>
                 </div>
             </nav> 
