--- a/ui/detailed-record.html
+++ b/ui/detailed-record.html
@@ -16,7 +16,7 @@
                         <li><a href="create.html">CREATE</a></li>
                         <li><a href="delete.html">DELETE</a></li>
                         <li><a href="user-profile.html">USER PROFILE</a></li>
-                        <li><a href="index.html">LOGOUT</a></li>
+                        <li><a href="../index.html">LOGOUT</a></li>
                     </ul>
                 </div>
             </nav> 
