--- a/ui/edit.html
+++ b/ui/edit.html
@@ -18,7 +18,7 @@
                         <li><a href="delete.html">DELETE</a></li>
                         <li><a href="edit.html" class="active" >EDIT</a></li>
                         <li><a href="user-profile.html">USER PROFILE</a></li>
-                        <li><a href="index.html">LOGOUT</a></li>
+                        <li><a href="../index.html">LOGOUT</a></li>
                                 
                     </ul>
                 </div>
