--- a/ui/login.html
+++ b/ui/login.html
@@ -20,15 +20,16 @@
                 <form class="login-form">
                     <img src="assets/images/avator.png">
                     <h1 style="color:white">LOGIN</h1>
-                    <input type="text" placeholder="username" required/><br>
-                    <input type="password" placeholder="password" required/><br>
-                    <button class="btn btn-signup">login</button>
+                    <input type="text" placeholder="username" id="username" required/><br>
+                    <input type="password" placeholder="password" id="password" required/><br>
+                    <input type="button" class="btn btn-signup" onclick="login()"  value="login"/>
                     <p class="indication">Not Registered? <a href="signup.html">signup</a></p>
                 </form>
 
 
             </div>
         </div>
+        <script src="assets/js/main.js"></script> 
     </header>
     <footer>
     </footer>
