--- a/ui/user-profile.html
+++ b/ui/user-profile.html
@@ -9,14 +9,14 @@
         <header>
             <nav>
                 <div class="top-logo">
-                    <img src="assets/images/i2.jpg"/>
+                    <img src="assets/images/logo1.jpeg"/>
                 </div>
                 <div class="menu">
                     <ul>
                         <li><a href="create.html">CREATE</a></li>
                         <li><a href="delete.html">DELETE</a></li>
                         <li><a href="user-profile.html" class="active">USER PROFILE</a></li>
-                        <li><a href="index.html">LOGOUT</a></li>
+                        <li><a href="../index.html">LOGOUT</a></li>
                     </ul>
                 </div>
             </nav> 
@@ -47,8 +47,8 @@
                   <label>380</label>
                 </div>
                 <div class="profile-buttons">
-                <a href="view-user-flags.html" class="btn btn-login">VIEW ALL FLAGS</a>
-                <a href="view-user-inter.html" class="btn btn-signup">VIEW ALL INTERVENTIONS</a>
+                <a href="user-flags.html" class="btn btn-login">VIEW ALL FLAGS</a>
+                <a href="user-inter.html" class="btn btn-signup">VIEW ALL INTERVENTIONS</a>
                 </div>
               </div> 
            
