Add changes to my links

--- a/ui/delete-inter.html
+++ b/ui/delete-inter.html
@@ -9,7 +9,7 @@
         <header>
             <nav>
                 <div class="top-logo">
-                    <img src="assets/images/i2.jpg"/>
+                    <img src="assets/images/logo1.jpeg"/>
                 </div>
                 <div class="menu">
                     <ul>
