--- a/ui/user-flags.html
+++ b/ui/user-flags.html
@@ -9,7 +9,7 @@
         <header>
             <nav>
                 <div class="top-logo">
-                    <img src="assets/images/i2.jpg"/>
+                    <img src="assets/images/logo1.jpeg"/>
                 </div>
                 <div class="menu">
                     <ul>
@@ -25,7 +25,6 @@
             <h1 class="text">View All Records</h1>
             <div class="box-right">
                 <h3><a href="detailed-record.html" class="title">Embezzlement</a></h3>
-                <!-- <img src="assets/images/9i.jpeg" alt="Image One"><br/><br/> -->
                 <p>Redflag title: ministry of finance</p>
                 <p>RedFlag Date: 20th aug 2018</p>
                 <p>comment: this is to much</p>
