--- a/ui/admin-inver.html
+++ b/ui/admin-inver.html
@@ -9,13 +9,13 @@
         <header>
             <nav>
                 <div class="top-logo">
-                    <img src="assets/images/i2.jpg"/>
+                    <img src="assets/images/logo1.jpeg"/>
                 </div>
                 <div class="menu">
                     <ul>
                         <li><a href="admin-view-flags.html">ALL FLAGS</a></li>
                         <li><a href="admin-view-inter.html">ALL INTERVENTIONS</a></li>
-                        <li><a href="index.html">LOGOUT</a></li>  
+                        <li><a href="../index.html">LOGOUT</a></li>  
                     </ul>
                 </div>
             </nav> 
