Add changes to links

--- a/ui/admin-view-flags.html
+++ b/ui/admin-view-flags.html
@@ -14,7 +14,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="admin-view-flags.html">ALL FLAGS</a></li>
-                        <li><a href="admin-view-inter.html">ALL INTERVENTIONS</a></li>
+                        <li><a href="admin-inver.html">ALL INTERVENTIONS</a></li>
                         <li><a href="../index.html">LOGOUT</a></li>  
                     </ul>
                 </div>
