--- a/ui/edit.html
+++ b/ui/edit.html
@@ -15,7 +15,7 @@
                     <ul>
                             
                         <li><a href="create.html">CREATE</a></li>
-                        <li><a href="delete.html">DELETE</a></li>
+                        <li><a href="delete-inter.html">DELETE</a></li>
                         <li><a href="edit.html" class="active" >EDIT</a></li>
                         <li><a href="user-profile.html">USER PROFILE</a></li>
                         <li><a href="../index.html">LOGOUT</a></li>
