--- a/ui/user-profile.html
+++ b/ui/user-profile.html
@@ -14,7 +14,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="create.html">CREATE</a></li>
-                        <li><a href="delete.html">DELETE</a></li>
+                        <li><a href="delete-redflag.html">DELETE</a></li>
                         <li><a href="user-profile.html" class="active">USER PROFILE</a></li>
                         <li><a href="../index.html">LOGOUT</a></li>
                     </ul>
