Add moifications to fit lfa's feedback

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
             </nav>
             <div class="main-content-header">
-                <h1>WELCOME TO THE <span class="colorchange">I REPORTER </span> SEE TAKE A PICTURE WE LOVE UGANDA</h1>
+                <h1>WELCOME TO THE <span class="colorchange">I REPORTER </span> SEE AND REPORT!LETS SAVE UGANDA TOGETHER</h1>
                 <a href="ui/login.html" class="btn btn-login">login</a>
                 <a href="ui/signup.html" class="btn btn-signup">signup</a>
             </div>
