--- a/ui/create.html
+++ b/ui/create.html
@@ -13,7 +13,7 @@
                 <ul>
                         
                     <li><a href="create.html" class="active" >CREATE</a></li>
-                    <li><a href="delete-inter.html">DELETE</a></li>
+                    <li><a href="delete-inter.html">VIEW INTERVENTION</a></li>
                     <li><a href="user-profile.html">USER PROFILE</a></li>
                     <li><a href="../index.html">LOGOUT</a></li>
                             
