--- a/ui/delete-redflag.html
+++ b/ui/delete-redflag.html
@@ -14,7 +14,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="create.html">CREATE</a></li>
-                        <li><a href="delete-inter.html" class="active" >DELETE INTERVENTION</a></li>
+                        <li><a href="delete-inter.html" class="active" >VIEW INTERVENTION</a></li>
                         <li><a href="user-profile.html">USER PROFILE</a></li>
                         <li><a href="../index.html">LOGOUT</a></li>
                     </ul>
