--- a/ui/about-us.html
+++ b/ui/about-us.html
@@ -1,16 +1,15 @@
 <html>
     <head>
         <title>WELCOME | Ireporter</title>
-        <link rel="stylesheet" href="ui/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <header>
             <nav>
                 <div class="row clearfix">
-                    <img class="logo" src="ui/assets/images/logo1.jpeg"/>
+                    <img class="logo" src="assets/images/logo1.jpeg"/>
                     <ul class="index-nav">
-                        <li><a href="ui/help.html">HELP</a></li>
-                        <li><a href="ui/about-us.html">ABOUT US</a></li>
+                        <li><a href="../index.html">HOME</a></li>
                     </ul>
                     <div class="barger">
                         <div class="line1"></div>
@@ -20,9 +19,11 @@
                 </div>
             </nav>
             <div class="main-content-header">
-                <h1>WELCOME TO THE <span class="colorchange">I REPORTER </span> SEE AND REPORT!LETS SAVE UGANDA TOGETHER</h1>
-                <a href="ui/login.html" class="btn btn-login">login</a>
-                <a href="ui/signup.html" class="btn btn-signup">signup</a>
+                <h4>Welcome to ireporter, We are excited to have you, We are a team of develpers in conjuction with the government of the republic of uganda, in a bid to eradicate corruption which has prevented quality services to the nationals of this country.
+
+                    
+                </h4><br><br>
+                <h3>Here to save Uganda</h3>
             </div>
         </header>
         <footer>
