--- a/ui/help.html
+++ b/ui/help.html
@@ -1,16 +1,16 @@
 <html>
     <head>
         <title>WELCOME | Ireporter</title>
-        <link rel="stylesheet" href="ui/assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
         <header>
             <nav>
                 <div class="row clearfix">
-                    <img class="logo" src="ui/assets/images/logo1.jpeg"/>
+                    <img class="logo" src="assets/images/logo1.jpeg"/>
                     <ul class="index-nav">
-                        <li><a href="ui/help.html">HELP</a></li>
-                        <li><a href="ui/about-us.html">ABOUT US</a></li>
+                        <li><a href="../index.html">HOME</a></li>
+                        <li><a href="#">ABOUT US</a></li>
                     </ul>
                     <div class="barger">
                         <div class="line1"></div>
@@ -20,7 +20,9 @@
                 </div>
             </nav>
             <div class="main-content-header">
-                <h1>WELCOME TO THE <span class="colorchange">I REPORTER </span> SEE AND REPORT!LETS SAVE UGANDA TOGETHER</h1>
+                <h4>Welcome to ireporter, this is an application where we report any kind of misuse of government funds. signup by creating and account, then login to access the application, create a redflag record which is details of a misuse you have noticed, you can delete, edit and view all you redflags. You can also report an intervention from your area for example broken wires, dusty roads.
+                </h4><br>
+                <h3>Here to save Uganda</h3><br>
                 <a href="ui/login.html" class="btn btn-login">login</a>
                 <a href="ui/signup.html" class="btn btn-signup">signup</a>
             </div>
