Add changes to links in my help page

--- a/ui/help.html
+++ b/ui/help.html
@@ -23,8 +23,8 @@
                 <h4>Welcome to ireporter, this is an application where we report any kind of misuse of government funds. signup by creating and account, then login to access the application, create a redflag record which is details of a misuse you have noticed, you can delete, edit and view all you redflags. You can also report an intervention from your area for example broken wires, dusty roads.
                 </h4><br>
                 <h3>Here to save Uganda</h3><br>
-                <a href="ui/login.html" class="btn btn-login">login</a>
-                <a href="ui/signup.html" class="btn btn-signup">signup</a>
+                <a href="login.html" class="btn btn-login">login</a>
+                <a href="signup.html" class="btn btn-signup">signup</a>
             </div>
         </header>
         <footer>
