Add LFA's feedback

--- a/ui/create.html
+++ b/ui/create.html
@@ -42,7 +42,7 @@
                         <select>
                                 <option class="option" value="Red-Flag">Red-Flag</option>
                                 <option class="option" value="Intervention">Intervention</option>
-                        </select><br>
+                        </select><br><br>
                         <button class="btn btn-signup">Submit Record</button>
                     </form>
     
