--- a/ui/edit.html
+++ b/ui/edit.html
@@ -27,9 +27,9 @@
                     <div class="form">
                         <form class="login-form">
                             <h1 class="text">Create Record</h1>
-                            <input type="text" placeholder="Record name" required/><br>
-                            <input type="password" placeholder="Location" required/><br>
-                            <input type="password" placeholder="Date" required/><br>
+                            <input type="text" placeholder="Record name"/><br>
+                            <input type="password" placeholder="Location"/><br>
+                            <input type="password" placeholder="Date"/><br>
                             <textarea class="textarea" placeholder="description"></textarea>
 
                             <label class="text">Geolocation: </label>
